// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atlassian Switcher - ItemWithDropdown renders Bitbucket snapshot correctly 1`] = `
<SwitcherItemWithDropDown
  childIcon={
    <Unknown
      theme="subtle"
    />
  }
  childItems={Array []}
  createAnalyticsEvent={[Function]}
  description={null}
  href="https://bitbucket.org"
  icon={
    <Unknown
      theme="product"
    />
  }
  onChildItemClick={[Function]}
  onExpandClick={[Function]}
  onItemClick={[Function]}
  tooltipContent={
    <span>
      Show more sites
    </span>
  }
>
  Bitbucket
</SwitcherItemWithDropDown>
`;

exports[`Atlassian Switcher - ItemWithDropdown renders an item with multiple sites correctly and clicking expand shows children sites 1`] = `
<styled.div>
  <styled.div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <styled.div
      isParentHovered={false}
    >
      <ThemeProvider
        theme={
          Object {
            "@atlaskit-shared-theme/item": Object {
              "default": Object {
                "background": "transparent",
                "secondaryText": "#6B778C",
                "text": [Function],
              },
              "hover": Object {
                "background": "transparent",
              },
              "padding": Object {
                "default": Object {
                  "bottom": 8,
                  "left": 8,
                  "right": 8,
                  "top": 8,
                },
              },
              "width": Object {
                "default": "100%",
              },
            },
          }
        }
      >
        <Item
          autoFocus={false}
          createAnalyticsEvent={[Function]}
          description="some-instance"
          elemBefore={
            <Unknown
              theme="product"
            />
          }
          href="https://app.opsgenie.com"
          isCompact={false}
          isDisabled={false}
          isHidden={false}
          onClick={[Function]}
          onExpandClick={[Function]}
          role="button"
          shouldAllowMultiline={false}
          tooltipContent={
            <span>
              Show more sites
            </span>
          }
        >
          Jira Software
        </Item>
      </ThemeProvider>
    </styled.div>
    <WithAnalyticsContext(WithAnalyticsEvents(Tooltip))
      content={
        <span>
          Show more sites
        </span>
      }
      hideTooltipOnMouseDown={true}
      position="top"
    >
      <styled.div
        isParentHovered={false}
      >
        <ThemeProvider
          theme={
            Object {
              "@atlaskit-shared-theme/item": Object {
                "default": Object {
                  "background": "transparent",
                  "secondaryText": "#6B778C",
                  "text": [Function],
                },
                "hover": Object {
                  "background": "transparent",
                },
                "padding": Object {
                  "default": Object {
                    "bottom": 8,
                    "left": 8,
                    "right": 8,
                    "top": 8,
                  },
                },
                "width": Object {
                  "default": "100%",
                },
              },
            }
          }
        >
          <Item
            autoFocus={false}
            data-test-id="switcher-expand-toggle"
            description=""
            isCompact={false}
            isDisabled={false}
            isHidden={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            shouldAllowMultiline={false}
          >
            <Component
              theme="subtle"
            />
          </Item>
        </ThemeProvider>
      </styled.div>
    </WithAnalyticsContext(WithAnalyticsEvents(Tooltip))>
  </styled.div>
</styled.div>
`;

exports[`Atlassian Switcher - ItemWithDropdown renders an item with multiple sites correctly and clicking expand shows children sites 2`] = `
<styled.div>
  <styled.div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <styled.div
      isParentHovered={false}
    >
      <ThemeProvider
        theme={
          Object {
            "@atlaskit-shared-theme/item": Object {
              "default": Object {
                "background": "transparent",
                "secondaryText": "#6B778C",
                "text": [Function],
              },
              "hover": Object {
                "background": "transparent",
              },
              "padding": Object {
                "default": Object {
                  "bottom": 8,
                  "left": 8,
                  "right": 8,
                  "top": 8,
                },
              },
              "width": Object {
                "default": "100%",
              },
            },
          }
        }
      >
        <Item
          autoFocus={false}
          createAnalyticsEvent={[Function]}
          description="some-instance"
          elemBefore={
            <Unknown
              theme="product"
            />
          }
          href="https://app.opsgenie.com"
          isCompact={false}
          isDisabled={false}
          isHidden={false}
          onClick={[Function]}
          onExpandClick={[Function]}
          role="button"
          shouldAllowMultiline={false}
          tooltipContent={
            <span>
              Show more sites
            </span>
          }
        >
          Jira Software
        </Item>
      </ThemeProvider>
    </styled.div>
    <styled.div
      isParentHovered={false}
    >
      <ThemeProvider
        theme={
          Object {
            "@atlaskit-shared-theme/item": Object {
              "default": Object {
                "background": "transparent",
                "secondaryText": "#6B778C",
                "text": [Function],
              },
              "hover": Object {
                "background": "transparent",
              },
              "padding": Object {
                "default": Object {
                  "bottom": 8,
                  "left": 8,
                  "right": 8,
                  "top": 8,
                },
              },
              "width": Object {
                "default": "100%",
              },
            },
          }
        }
      >
        <Item
          autoFocus={false}
          data-test-id="switcher-expand-toggle"
          description=""
          isCompact={false}
          isDisabled={false}
          isHidden={false}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          shouldAllowMultiline={false}
        >
          <Component
            theme="subtle"
          />
        </Item>
      </ThemeProvider>
    </styled.div>
  </styled.div>
  <ThemeProvider
    theme={
      Object {
        "@atlaskit-shared-theme/item": Object {
          "default": Object {
            "background": "transparent",
            "secondaryText": "#6B778C",
            "text": "#253858",
          },
          "hover": Object {
            "background": "rgba(9, 30, 66, 0.04)",
          },
          "padding": Object {
            "default": Object {
              "bottom": 4,
              "left": 8,
              "right": 8,
              "top": 4,
            },
          },
        },
      }
    }
  >
    <styled.div>
      <Item
        autoFocus={false}
        data-test-id="switcher-child-item"
        description=""
        elemBefore={
          <Avatar
            avatarUrl="https://site-admin-avatar-cdn.staging.public.atl-paas.net/avatars/240/rocket.png"
            fallbackComponent={
              <Unknown
                theme="subtle"
              />
            }
          />
        }
        href="https://site00.atlassian.net/secure/BrowseProjects.jspa?selectedProjectType=software"
        isCompact={false}
        isDisabled={false}
        isHidden={false}
        key="site00"
        onClick={[Function]}
        role="button"
        shouldAllowMultiline={false}
      >
        site00
      </Item>
      <Item
        autoFocus={false}
        data-test-id="switcher-child-item"
        description=""
        elemBefore={
          <Avatar
            avatarUrl="https://site-admin-avatar-cdn.stg.public.atl-paas.net/avatars/240/rocket.png"
            fallbackComponent={
              <Unknown
                theme="subtle"
              />
            }
          />
        }
        href="https://site10.atlassian.net/secure/BrowseProjects.jspa?selectedProjectType=software"
        isCompact={false}
        isDisabled={false}
        isHidden={false}
        key="site10"
        onClick={[Function]}
        role="button"
        shouldAllowMultiline={false}
      >
        site10
      </Item>
      <Item
        autoFocus={false}
        data-test-id="switcher-child-item"
        description=""
        elemBefore={
          <Avatar
            avatarUrl={null}
            fallbackComponent={
              <Unknown
                theme="subtle"
              />
            }
          />
        }
        href="https://site30.atlassian.net/secure/BrowseProjects.jspa?selectedProjectType=software"
        isCompact={false}
        isDisabled={false}
        isHidden={false}
        key="site30"
        onClick={[Function]}
        role="button"
        shouldAllowMultiline={false}
      >
        site30
      </Item>
    </styled.div>
  </ThemeProvider>
</styled.div>
`;

exports[`Atlassian Switcher - ItemWithDropdown renders an item with multiple sites correctly and clicking expand shows children sites 3`] = `
<styled.div>
  <styled.div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <styled.div
      isParentHovered={false}
    >
      <ThemeProvider
        theme={
          Object {
            "@atlaskit-shared-theme/item": Object {
              "default": Object {
                "background": "transparent",
                "secondaryText": "#6B778C",
                "text": [Function],
              },
              "hover": Object {
                "background": "transparent",
              },
              "padding": Object {
                "default": Object {
                  "bottom": 8,
                  "left": 8,
                  "right": 8,
                  "top": 8,
                },
              },
              "width": Object {
                "default": "100%",
              },
            },
          }
        }
      >
        <Item
          autoFocus={false}
          createAnalyticsEvent={[Function]}
          description="some-instance"
          elemBefore={
            <Unknown
              theme="product"
            />
          }
          href="https://app.opsgenie.com"
          isCompact={false}
          isDisabled={false}
          isHidden={false}
          onClick={[Function]}
          onExpandClick={[Function]}
          role="button"
          shouldAllowMultiline={false}
          tooltipContent={
            <span>
              Show more sites
            </span>
          }
        >
          Jira Software
        </Item>
      </ThemeProvider>
    </styled.div>
    <WithAnalyticsContext(WithAnalyticsEvents(Tooltip))
      content={
        <span>
          Show more sites
        </span>
      }
      hideTooltipOnMouseDown={true}
      position="top"
    >
      <styled.div
        isParentHovered={false}
      >
        <ThemeProvider
          theme={
            Object {
              "@atlaskit-shared-theme/item": Object {
                "default": Object {
                  "background": "transparent",
                  "secondaryText": "#6B778C",
                  "text": [Function],
                },
                "hover": Object {
                  "background": "transparent",
                },
                "padding": Object {
                  "default": Object {
                    "bottom": 8,
                    "left": 8,
                    "right": 8,
                    "top": 8,
                  },
                },
                "width": Object {
                  "default": "100%",
                },
              },
            }
          }
        >
          <Item
            autoFocus={false}
            data-test-id="switcher-expand-toggle"
            description=""
            isCompact={false}
            isDisabled={false}
            isHidden={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            shouldAllowMultiline={false}
          >
            <Component
              theme="subtle"
            />
          </Item>
        </ThemeProvider>
      </styled.div>
    </WithAnalyticsContext(WithAnalyticsEvents(Tooltip))>
  </styled.div>
</styled.div>
`;

exports[`Atlassian Switcher - ItemWithDropdown renders single site item correctly 1`] = `
<AnalyticsContextConsumer
  createEventMap={
    Object {
      "onChildItemClick": [Function],
      "onExpandClick": [Function],
      "onItemClick": [Function],
    }
  }
  wrappedComponentProps={
    Object {
      "childIcon": <Unknown
        theme="subtle"
      />,
      "childItems": Array [],
      "children": "Opsgenie",
      "description": "some-instance",
      "href": "https://app.opsgenie.com",
      "icon": <Unknown
        theme="product"
      />,
      "tooltipContent": <span>
        Show more sites
      </span>,
    }
  }
>
  <Component />
</AnalyticsContextConsumer>
`;
